adding ansible.cfg

--- a/playbook.yml
+++ b/playbook.yml
@@ -63,7 +63,7 @@
         update_cache: yes
 
     # Instalar Docker
-    - name: Instalar Docker
+    - name: Instalar Docke
       apt:
         name: docker-ce
         state: present
