ansible sonar done

--- a/roles/devops_services/docker-compose.yml
+++ b/roles/devops_services/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   jenkins:
-    image: jenkins/jenkins:lts-jdk17  # Imagen oficial LTS con Java 17
+    build: .
     container_name: jenkins
     restart: unless-stopped
     ports:
@@ -9,11 +9,42 @@ services:
     volumes:
       - jenkins_data:/var/jenkins_home  # Volumen para persistencia
       - /var/run/docker.sock:/var/run/docker.sock  # Solo si necesitas ejecutar Docker desde Jenkins
-      - ./init.groovy.d:/usr/share/jenkins/ref/init.groovy.d  # Mapea tus scripts Groovy
     environment:
       - JENKINS_ADMIN_ID=admin
       - JENKINS_ADMIN_PASSWORD=admin  
-      - JAVA_OPTS=-Djenkins.install.runSetupWizard=false  # Opcional: Desactiva setup wizard inicial
+      - JAVA_OPTS=-Djenkins.install.runSetupWizard=false
+
+# ------------- Sonarqube -------------
+  sonarqube:
+    image: sonarqube:9.9-community
+    container_name: sonarqube
+    depends_on:
+      - db
+    ports:
+      - "9000:9000"
+    environment:
+      - sonar.jdbc.url=jdbc:postgresql://db:5432/sonar
+      - sonar.jdbc.username=sonar
+      - sonar.jdbc.password=sonar
+    volumes:
+      - sonarqube_conf:/opt/sonarqube/conf
+      - sonarqube_data:/opt/sonarqube/data
+      - sonarqube_extensions:/opt/sonarqube/extensions
+
+  db:
+    image: postgres
+    environment:
+      - POSTGRES_USER=sonar
+      - POSTGRES_PASSWORD=sonar
+    volumes:
+      - postgresql:/var/lib/postgresql
+      # This needs explicit mapping due to https://github.com/docker-library/postgres/blob/4e48e3228a30763913ece952c611e5e9b95c8759/Dockerfile.template#L52
+      - postgresql_data:/var/lib/postgresql/data
 
 volumes:
   jenkins_data:
+  sonarqube_conf: 
+  sonarqube_data: 
+  sonarqube_extensions: 
+  postgresql: 
+  postgresql_data: 
